# ddm

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SPEC.md  TASKS.md
.github/workflows/: ci.yml
cmake/: driftmonConfig.cmake.in
examples/deepmimo_demo/: demo_driver.cpp  gen_zones.py  run_demo.py
examples/onnx_integration/: onnx_glue.cpp
export/: driftmon_export.cpp  driftmon_export.h
include/: driftmon.h
src/: driftmon.cpp  json_min.cpp  json_min.h
tests/: test_driftmon.cpp  test_export.cpp  test_framework.h  test_make_reference.py
tools/: check_reference.cpp  make_reference.py
